Completed create full api for snacks
